--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'java'
 apply plugin: 'kotlin'
+apply plugin: 'application'
 
 repositories {
     jcenter()
@@ -22,6 +23,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
+mainClassName = 'co.helmethair.Main'
 
 compileKotlin {
     kotlinOptions {
