--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,11 @@
 apply plugin: 'java'
 apply plugin: 'kotlin'
 apply plugin: 'application'
+apply plugin: 'org.junit.platform.gradle.plugin'
 
 repositories {
+    mavenCentral()
     jcenter()
-}
-
-dependencies {
-    compile 'org.slf4j:slf4j-api:1.7.21'
-    compile 'com.github.kittinunf.fuel:fuel:1.12.1'
-    compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: "$jackson_version"
-    testCompile 'junit:junit:4.12'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
 
 buildscript {
@@ -21,9 +15,20 @@ buildscript {
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.1.0'
     }
 }
 mainClassName = 'co.helmethair.Main'
+
+dependencies {
+    compile 'org.slf4j:slf4j-api:1.7.21'
+    compile 'com.github.kittinunf.fuel:fuel:1.12.1'
+    compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: "$jackson_version"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    testCompile("org.junit.jupiter:junit-jupiter-api:5.1.0")
+    testRuntime("org.junit.jupiter:junit-jupiter-engine:5.1.0")
+    testCompile "org.mockito:mockito-core:2.+"
+}
 
 compileKotlin {
     kotlinOptions {
@@ -35,6 +40,8 @@ compileTestKotlin {
         jvmTarget = "1.8"
     }
 }
+
+junitPlatform { }
 
 task wrapper(type: Wrapper) {
     distributionUrl = "https://services.gradle.org/distributions/gradle-$gradleVersion-all.zip"
