--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,6 @@
-apply plugin: 'java'
 apply plugin: 'kotlin'
-apply plugin: 'application'
 apply plugin: 'org.junit.platform.gradle.plugin'
+apply plugin: 'org.jetbrains.dokka'
 
 repositories {
     mavenCentral()
@@ -12,13 +11,14 @@ buildscript {
     ext.kotlin_version = '1.2.30'
     repositories {
         mavenCentral()
+        jcenter()
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'org.junit.platform:junit-platform-gradle-plugin:1.1.0'
+        classpath "org.jetbrains.dokka:dokka-gradle-plugin:0.9.16"
     }
 }
-mainClassName = 'co.helmethair.Main'
 
 dependencies {
     compile 'org.slf4j:slf4j-api:1.7.21'
@@ -45,4 +45,18 @@ junitPlatform { }
 
 task wrapper(type: Wrapper) {
     distributionUrl = "https://services.gradle.org/distributions/gradle-$gradleVersion-all.zip"
+}
+
+version = '0.1.0'
+
+dokka {
+    outputFormat = 'html'
+    outputDirectory = "$buildDir/javadoc"
+}
+
+jar {
+    manifest {
+        attributes('Implementation-Title': project.name,
+                'Implementation-Version': project.version)
+    }
 }
