--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,10 @@
+import groovy.json.JsonSlurper
+import groovy.json.JsonBuilder
+
 apply plugin: 'kotlin'
 apply plugin: 'org.junit.platform.gradle.plugin'
 apply plugin: 'org.jetbrains.dokka'
+apply plugin: 'maven-publish'
 
 repositories {
     mavenCentral()
@@ -49,6 +53,19 @@ task wrapper(type: Wrapper) {
 
 version = '0.1.0'
 
+task generateBintrayDescriptor {
+    doLast {
+        def templateJson = file('scripts/descriptor-template.json')
+        def json = new JsonSlurper().parseText(templateJson.text)
+        json.version.name = project.version
+        json.version.released = new Date().format('yyyy-MM-dd')
+        json.files[0].uploadPattern = "co/helmethair/${project.name}/${project.version}/\$1"
+        def outputJson = file('descriptor.json')
+        outputJson.createNewFile()
+        outputJson.write(new JsonBuilder(json).toPrettyString())
+    }
+}
+
 dokka {
     outputFormat = 'html'
     outputDirectory = "$buildDir/javadoc"
@@ -58,5 +75,29 @@ jar {
     manifest {
         attributes('Implementation-Title': project.name,
                 'Implementation-Version': project.version)
+    }
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId 'co.helmethair'
+            from components.java
+            pom.withXml {
+                asNode().dependencies.'*'.findAll() {
+                    it.scope.text() == 'runtime' && project.configurations.compile.allDependencies.find { dep ->
+                        dep.name == it.artifactId.text()
+                    }
+                }.each() {
+                    it.scope*.value = 'compile'
+                }
+            }
+        }
+    }
+}
+
+model {
+    tasks.generatePomFileForMavenPublication {
+        destination = file("$buildDir/libs/${project.name}-${project.version}.pom")
     }
 }
