prevent travis from deleting generated files during deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ before_deploy:
 - "./gradlew generateBintrayDescriptor"
 - "./gradlew generatePomFileForMavenPublication"
 deploy:
+  skip-cleanup: true
   provider: bintray
   file: descriptor.json
   user: "$BINTRAY_API_USER"
